# fyp

./: .gitignore  README.md  bot.py  game_state.json  main.py  main_simple.py  requirements.txt
backend/: .env.example  pyproject.toml  requirements.txt  server.py  visualize_all.py  visualize_end.py  visualize_log.py  viz.py
backend/bot/: bot.py  evaluator.py  handle_messages.py  test.py  test2.py  vanilla_bot.py
backend/bot/prompts/: austria_system_prompt.txt  england_system_prompt.txt  france_system_prompt.txt  germany_system_prompt.txt  italy_system_prompt.txt  russia_system_prompt.txt  turkey_system_prompt.txt
backend/experiments/: backtest_scorer.py  evaluator_experiment.py  profile_efficiency.py  simulate.py  tactical_scorer_experiment.py
backend/function_tools/: db.py  move_validator.py  tactial_scorer.py  tactical_scorer.py
backend/game_logs/: run1_baseline_sim_04c378d3_log.json  run2_baseline_sim_9f922f1a_log.json  run3_baseline_sim_ae0da5e3_log.json  run4_baseline_sim_9d957a44_log.json  run5_baseline_sim_048b17dc_log.json  run6_baseline_sim_e062d6d1_log.json  v1sim_6040a108_log.json  v1sim_a4511235_log.json  v1sim_c2058746_log.json  v2sim_38dcdb7b_log.json  v2sim_d16be798_log.json  v2sim_f16954b1_log.json
backend/test/: conftest.py  test_bot.py  test_db.py  test_e2e.py  test_evaluator.py  test_handle_messages.py  test_move_validator.py  test_server.py  test_tactial_scorer.py  test_viz.py
deploy/: issues.md  qs_issues.md  readme.md  test_script.py  (+4 more)
frontend/: .env.example  app.py  frontend copy.py  frontend.py  pyproject.toml  test_frontend.py
(+27 files in other folders)
