[project]
name = "my-ai-project"
version = "0.1.0"
description = "AI agent and web service project"
requires-python = ">=3.10"
dependencies = [
    "diplomacy==1.1.2",
    "matplotlib",
    "fastmcp>=2.13.0.2",
    "groq",
    "httpx>=0.28.1",
    "httpx-sse>=0.4.3",
    "mcp>=1.21.1",
    "openai-agents[litellm]",
    "fastapi",
    "jose",
    "jwt",
    "pydantic",
    "google-genai",
    "langchain",
    "langchain-core",
    "langchain-google-genai",
    "uvicorn",
    "psycopg2-binary",
    "st-click-detector",
    "cairosvg",
]

[dependency-groups]
dev = [
    "pytest",
]

[tool.uv]
package = false